[package]
name = "actix-optional-middleware"
version = "0.1.0"
authors = ["realaravinth <realaravinth@batsense.net>"]
description = "Conditionally load am actix-web middleware"
keywords = ["actix-web", "middleware"]
homepage = "https://github.com/realaravinth/actix-optional-middleware"
repository = "https://github.com/realaravinth/actix-optional-middleware"
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.14"
actix-service = "2.0"
futures = "0.3.17"
actix-http = "3.0.0-beta.15"
actix-identity = "0.4.0-beta.5"

[dev-dependencies]
actix-rt = "2"
my-codegen = {package = "actix-web-codegen", git ="https://github.com/realaravinth/actix-web"}
